@@ -1,5 +1,10 @@
 2006-10-13  David Trowbridge  <trowbrds@gmail.com>
 
+	* src/fe-gnome/main-window.c:
+	  - Make nickname button properly adjust to theme changes (#348870).
+
+2006-10-13  David Trowbridge  <trowbrds@gmail.com>
+
 	* src/fe-gnome/preferences-page-dcc.c:
 	* src/fe-gnome/util.c:
 	* src/fe-gnome/text-entry.c:
